<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.sourceforge.icedtea-web</groupId>
  <artifactId>icedtea-web-parent</artifactId>
  <version>2.6.1</version>
  <packaging>pom</packaging>

  <name>IcedTea-Web Parent</name>
  <description>Parent POM for IcedTea-Web Maven build</description>

  <modules>
    <module>icedtea-web</module>
    <module>icedtea-web-integration</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
    <maven.enforcer.plugin.version>3.3.0</maven.enforcer.plugin.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <jdk8.home>/usr/lib/jvm/java-1.8.0-amazon-corretto</jdk8.home>
    <jdk11.home>/usr/lib/jvm/java-11-amazon-corretto</jdk11.home>
    <maven.compiler.executable>${jdk11.home}/bin/javac</maven.compiler.executable>
    <maven.compiler.fork>true</maven.compiler.fork>
    <junit.version>5.10.2</junit.version>
    <!-- Java 17: 1.10.19+, Java 21: 1.14.3+, Java 25: 1.17.0+ (see byte-buddy README compatibility table) -->
    <bytebuddy.version>1.18.8</bytebuddy.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy</artifactId>
        <version>${bytebuddy.version}</version>
      </dependency>
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy-agent</artifactId>
        <version>${bytebuddy.version}</version>
      </dependency>
      <dependency>
        <groupId>net.sourceforge.icedtea-web</groupId>
        <artifactId>icedtea-web</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.sourceforge.icedtea-web</groupId>
        <artifactId>icedtea-web</artifactId>
        <version>${project.version}</version>
        <classifier>uber</classifier>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <encoding>UTF-8</encoding>
            <fork>${maven.compiler.fork}</fork>
            <executable>${maven.compiler.executable}</executable>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven.enforcer.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>maven-distribution</id>
      <modules>
        <module>icedtea-web-distribution</module>
      </modules>
    </profile>
  </profiles>

</project>
